---
source: arc-script-test/compile/src/insta.rs
expression: s
input_file: arc-script-test/compile/src/tests/expect_pass/option.arc

---
module @toplevel {
    !arc.enum<crate_Opt_Some : si32, crate_Opt_None : ()>
    func @crate_x_1() -> () {
        return 
    }
    func @crate_main() -> () {
        %x_3 = arc.constant 3 : si32
        %x_4 = "arc.enwrap"(%x_3) { variant = crate_Opt_Some } : si32 -> !arc.enum<crate_Opt_Some : si32, crate_Opt_None : ()>
        %x_5 = "arc.is"%x_4 { variant = crate_Opt_Some } : !arc.enum<crate_Opt_Some : si32, crate_Opt_None : ()> -> i1
        return 
    }
}

